--- a/wp-content/themes/betheme/css/layout.css
+++ b/wp-content/themes/betheme/css/layout.css
@@ -34,7 +34,7 @@
 .page.hide-title-area #Content,.no-content-padding #Content,.template-blank #Content,.under-construction #Content{padding:0!important}
 .with_aside.page.hide-title-area .sections_group,.with_aside.no-content-padding .sections_group{padding:0!important}
 .under-construction .section-uc-1{padding-top:40px;background-color:#fff}
-.under-construction .section-uc-2{padding-top:40px;background-color:#f5f5f5;background:url(../images/stripes/stripes_3_b.png) repeat center}
+.under-construction .section-uc-2{padding-top:40px;background-color:#f5f5f5;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/stripes_3_b.png) repeat center}
 .under-construction .section-uc-3{padding-top:40px}
 .under-construction .section-border-top{border-top:1px solid rgba(0,0,0,0.08)}
 
@@ -79,7 +79,7 @@
 /* Pager ----------------------------------------------------------------------------- */
 .pager_wrapper{margin-bottom:0}
 .pager{text-align:center}
-.pager .pages{display:inline-block;margin:20px 30px 0;padding:4px 3px;-webkit-border-radius:5px;border-radius:5px;background-color:#f8f8f8;background-image:url(../images/stripes/stripes_3_b.png)}
+.pager .pages{display:inline-block;margin:20px 30px 0;padding:4px 3px;-webkit-border-radius:5px;border-radius:5px;background-color:#f8f8f8;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/stripes_3_b.png)}
 .pager .pages a,.pager .pages span.page-numbers{display:inline-block;margin:0 1px;width:35px;height:35px;line-height:35px;text-align:center;-webkit-border-radius:5px;border-radius:5px}
 .pager .pages a:hover{text-decoration:none}
 .pager .pages a:hover,.pager .pages a.active,.pager .pages span.page-numbers.current{color:#fff}
@@ -90,7 +90,7 @@
 .button-round .pager .pages .page{border-radius:50px}
 
 /* Load more button ------------------------------------------------------------------ */
-.pager_lm{background:url(../images/preloader.gif) no-repeat center 17px;text-align:center}
+.pager_lm{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/preloader.gif) no-repeat center 17px;text-align:center}
 .pager_lm .pager_load_more{margin:20px 0}
 .pager_lm.loading{min-height:49px}
 .pager_lm:not(.loading){background:none}
@@ -163,7 +163,7 @@
 
 /* Filters --------------------------------------------------------------------------- */
 #Filters{margin-bottom:30px}
-#Filters .filters_buttons{padding:15px;margin:0;font-size:100%;background-image:url(../images/stripes/stripes_5_b.png);-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:hidden}
+#Filters .filters_buttons{padding:15px;margin:0;font-size:100%;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/stripes_5_b.png);-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:hidden}
 #Filters .filters_buttons li{float:left;margin:0 15px 0 0;list-style:none}
 #Filters .filters_buttons li.categories i,#Filters .filters_buttons li.tags i{margin-right:3px}
 #Filters .filters_buttons li.reset{float:right;margin-right:0}
@@ -402,7 +402,7 @@ body.minimalist-header.header-below:not(.template-slider) #Header{min-height:90p
 #Top_bar.is-sticky .menu_wrapper .menu.page-menu > li > a {margin:0;padding-left:20px;padding-right:20px;}
 
 /* 2nd level */
-#Top_bar .menu li ul{position:absolute;left:0;top:100%;z-index:205;margin:0;display:none;background-image:url(../images/box_shadow.png);background-repeat:repeat-x;background-position:left top}
+#Top_bar .menu li ul{position:absolute;left:0;top:100%;z-index:205;margin:0;display:none;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/box_shadow.png);background-repeat:repeat-x;background-position:left top}
 #Top_bar .menu li > ul{box-shadow:2px 2px 2px 0 rgba(0,0,0,0.03);-webkit-box-shadow:2px 2px 2px 0 rgba(0,0,0,0.03)}
 #Top_bar .menu li ul li{padding:0;width:200px;position:relative;font-weight:400}
 #Top_bar .menu li ul li a{padding:10px 20px;display:block;border-bottom:1px solid rgba(0,0,0,0.05)}
@@ -883,7 +883,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 		.masonry.tiles{position:relative}
 		.masonry.tiles .post-item{margin:0!important;overflow:hidden;background-color:transparent}
 		.masonry.tiles .post-item:not(.no-img) .post-desc-wrapper{position:absolute;z-index:4;left:0;bottom:-20px}
-		.masonry.tiles .post-item:not(.no-img) .post-desc-wrapper .post-desc{background:url(../images/blog_masonry_tile_gradient.png) top left repeat-x;padding:70px 30px 30px}
+		.masonry.tiles .post-item:not(.no-img) .post-desc-wrapper .post-desc{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/blog_masonry_tile_gradient.png) top left repeat-x;padding:70px 30px 30px}
 		.masonry.tiles .post-item .post-desc-wrapper .post-desc{padding:50% 30px 10px}
 		.masonry.tiles .post-item .post-desc-wrapper .post-desc .post-meta .author-date .post-links{display:inline-block;margin-left:10px}
 		.masonry.tiles .post-item .post-desc-wrapper .post-desc .post-excerpt{display:none}
@@ -932,7 +932,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 			.masonry.tiles .post-item .post-desc-wrapper .post-desc .post-head .post-meta,.masonry.tiles .post-item .post-desc-wrapper .post-desc .post-head .post-meta a,.masonry.tiles .post-item .post-desc-wrapper .post-desc .post-excerpt{color:rgba(255,255,255,.7)}
 
 		/* Timeline */
-		.timeline .post-item{float:none;width:auto;padding-left:200px;margin-bottom:0;padding-bottom:40px;background:url(../images/timeline_right.png) no-repeat 90px top}
+		.timeline .post-item{float:none;width:auto;padding-left:200px;margin-bottom:0;padding-bottom:40px;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/timeline_right.png) no-repeat 90px top}
 		.timeline .post-item:last-child{padding-bottom:20px;margin-bottom:20px}
 		.timeline .format-quote .post-meta,.timeline .format-link .post-meta{padding-top:7px}
 		.timeline .post-item:before{content:"";width:7px;height:7px;border-width:4px;border-style:solid;-webkit-border-radius:100%;border-radius:100%;position:absolute;left:126px;top:11px;display:block;visibility:visible;z-index:1}
@@ -1031,7 +1031,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 	.format-link .post-title .link-wrapper h4{margin-bottom:7px;font-size:20px;line-height:22px}
 
 /* Single Post ----------------------------------------------------------------------- */
-.post-nav{padding:10px 15px 4px 130px;margin-bottom:20px;background-image:url(../images/stripes/stripes_5_b.png);-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:hidden}
+.post-nav{padding:10px 15px 4px 130px;margin-bottom:20px;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/stripes_5_b.png);-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:hidden}
 .post-nav .next-prev-nav{float:left}
 .post-nav .next-prev-nav li{float:left;margin-right:5px}
 .post-nav .next-prev-nav a.button{margin:0;padding:0!important}
@@ -1285,7 +1285,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 
 	/* Recent comments */
 	.widget_mfn_recent_comments ul{margin:0!important}
-	.widget_mfn_recent_comments ul li{padding-bottom:15px;margin-bottom:0!important;background:url(../images/recent_comments.png) no-repeat 4px top;padding-left:40px;position:relative;list-style:none!important}
+	.widget_mfn_recent_comments ul li{padding-bottom:15px;margin-bottom:0!important;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/recent_comments.png) no-repeat 4px top;padding-left:40px;position:relative;list-style:none!important}
 	.widget_mfn_recent_comments ul li:last-child{padding-bottom:5px}
 	.widget_mfn_recent_comments ul li .date_label{background-color:rgba(0,0,0,.03);margin-top:7px;margin-bottom:5px;position:relative}
 	.widget_mfn_recent_comments ul li .date_label:after{border-left-color:rgba(0,0,0,.03)}
@@ -1293,7 +1293,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 	.widget_mfn_recent_comments ul li p{margin-bottom:0}
 
 	/* Recent comments wordpress */
-	.widget_recent_comments ul li{padding-bottom:5px;padding-top:6px;background:url(../images/recent_comments.png) no-repeat 4px top;padding-left:40px;position:relative}
+	.widget_recent_comments ul li{padding-bottom:5px;padding-top:6px;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/recent_comments.png) no-repeat 4px top;padding-left:40px;position:relative}
 	.widget_recent_comments ul li:last-child{padding-bottom:5px}
 	.widget_recent_comments ul li:after{content:"";width:7px;height:7px;border-width:4px;border-style:solid;-webkit-border-radius:100%;border-radius:100%;position:absolute;left:0;top:11px;display:block;z-index:1}
 
@@ -1636,7 +1636,7 @@ body.mobile-side-slide{position:relative;overflow-x:visible;}
 /* #comments .commentlist > li .comment-meta a.comment-edit-link{float:right;padding-right:52px;position:relative;top:-19px} */
 #comments .commentlist > li p{margin:4px 0 10px}
 #comments .commentlist > li .reply{position:absolute;right:20px;top:20px}
-#comments .commentlist > li .reply a.comment-reply-link{font-size:11px;color:#fff;padding:3px 6px;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:3px;background-image:url(../images/stripes/stripes_10_w.png)}
+#comments .commentlist > li .reply a.comment-reply-link{font-size:11px;color:#fff;padding:3px 6px;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:3px;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/stripes_10_w.png)}
 #comments .commentlist > li .reply a:hover.comment-reply-link{text-decoration:none}
 #comments .commentlist li .comment-body.lastBorder{border-bottom:0}
 #comments .commentlist .children{margin-bottom:0;margin-left:30px;padding-left:50px}
@@ -1690,7 +1690,7 @@ body.error404:not(.events-archive) #Content{padding:0!important}
 /* Video Section --------------------------------------------------------------------- */
 .section.has-video{position:relative;overflow:hidden}
 .section.has-video .section_video{position:absolute;top:0;left:0;min-height:100%;min-width:100%;overflow:hidden;z-index:1}
-.section.has-video .section_video .mask{position:absolute;top:0;left:0;height:100%;width:100%;z-index:3;background:url(../images/videomask.png) repeat center}
+.section.has-video .section_video .mask{position:absolute;top:0;left:0;height:100%;width:100%;z-index:3;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/videomask.png) repeat center}
 .section.has-video .section_video video{position:absolute;top:0;left:0;min-height:100%;min-width:100%;z-index:2}
 .section.has-video .section_wrapper{position:relative;z-index:10}
 @media only screen and (max-device-width:1024px) {
@@ -1714,7 +1714,7 @@ body.error404:not(.events-archive) #Content{padding:0!important}
 .dark .ui-tabs .ui-tabs-panel,.dark .accordion .question .answer{color:#626262}
 
 /* Blockquote */
-.dark blockquote{background-image:url(../images/stripes/textline_dark.png)}
+.dark blockquote{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/stripes/textline_dark.png)}
 .dark blockquote:after{color:rgba(255,255,255,.1)}
 
 /* Headings font */
@@ -1786,7 +1786,7 @@ body.error404:not(.events-archive) #Content{padding:0!important}
 .dark .call_to_action .call_center a{color:#fff}
 
 /* Fancy heading */
-.dark .fancy_heading_line{background-image:url(../images/fancy_heading_hr_dark.png)}
+.dark .fancy_heading_line{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/fancy_heading_hr_dark.png)}
 
 /* Content slider */
 .dark .content_slider.flat a.button .button_icon i{color:#fff}
