--- a/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.css
+++ b/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.css
@@ -18,22 +18,22 @@ div.jp-interface ul.jp-controls a{display:block;overflow:hidden;text-indent:-999
 
 a.jp-play,a.jp-pause{height:30px;width:30px;background-color:rgba(0,0,0,.05)}
 a:hover.jp-play,a:hover.jp-pause{background-color:rgba(0,0,0,.1)}
-a.jp-play{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-8px -8px;left:0;position:absolute;top:0}
-a.jp-pause{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-53px -8px;display:none;left:0;position:absolute;top:0}
+a.jp-play{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-8px -8px;left:0;position:absolute;top:0}
+a.jp-pause{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-53px -8px;display:none;left:0;position:absolute;top:0}
 a.jp-stop,a.jp-previous,a.jp-next{height:24px;width:24px}
-a.jp-stop{background:url(jplayer.png) no-repeat scroll -60px 0 rgba(0,0,0,0);left:60px;position:absolute;top:23px;display:none!important}
-a.jp-stop:hover{background:url(jplayer.png) no-repeat scroll -60px 0 rgba(0,0,0,0)}
-a.jp-previous{background:url(jplayer.blue.monday.jpg) no-repeat scroll 0 -112px rgba(0,0,0,0)}
-a.jp-previous:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -29px -112px rgba(0,0,0,0)}
-a.jp-next{background:url(jplayer.blue.monday.jpg) no-repeat scroll 0 -141px rgba(0,0,0,0)}
-a.jp-next:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -29px -141px rgba(0,0,0,0)}
+a.jp-stop{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png) no-repeat scroll -60px 0 rgba(0,0,0,0);left:60px;position:absolute;top:23px;display:none!important}
+a.jp-stop:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png) no-repeat scroll -60px 0 rgba(0,0,0,0)}
+a.jp-previous{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll 0 -112px rgba(0,0,0,0)}
+a.jp-previous:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -29px -112px rgba(0,0,0,0)}
+a.jp-next{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll 0 -141px rgba(0,0,0,0)}
+a.jp-next:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -29px -141px rgba(0,0,0,0)}
 
 div.jp-progress{background:none repeat scroll 0 0 rgba(0,0,0,0);overflow:hidden;margin:0 90px 0 30px;height:30px!important}
 div.jp-audio div.jp-progress{height:15px;position:absolute;top:32px}
 div.jp-video div.jp-progress{height:4px;left:0;top:0}
 div.jp-seek-bar{cursor:pointer;height:100%;width:0;background:none!important}
 div.jp-play-bar{height:100%;width:0;background-color:rgba(255,255,255,.15)}
-div.jp-seeking-bg{background:url(jplayer.blue.monday.seeking.gif) repeat scroll 0 0 rgba(0,0,0,0)}
+div.jp-seeking-bg{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.seeking.gif) repeat scroll 0 0 rgba(0,0,0,0)}
 
 a.jp-mute,a.jp-unmute,a.jp-volume-max{height:10px;width:10px}
 div.jp-audio div.jp-type-single a.jp-mute,div.jp-audio div.jp-type-single a.jp-unmute{margin-left:210px}
@@ -46,17 +46,17 @@ div.jp-video a.jp-mute,div.jp-video a.jp-unmute,div.jp-video a.jp-volume-max{mar
 div.jp-video a.jp-mute,div.jp-video a.jp-unmute{right:70px;top:10px;z-index:2}
 div.jp-video a.jp-volume-max{display:none!important;left:134px}
 
-a.jp-unmute{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-235px 0;display:none}
-a.jp-unmute:hover{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-235px 0}
-a.jp-volume-max{background:url(jplayer.blue.monday.jpg) no-repeat scroll 0 -186px rgba(0,0,0,0)}
-a.jp-volume-max:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -19px -186px rgba(0,0,0,0)}
+a.jp-unmute{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-235px 0;display:none}
+a.jp-unmute:hover{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-235px 0}
+a.jp-volume-max{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll 0 -186px rgba(0,0,0,0)}
+a.jp-volume-max:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -19px -186px rgba(0,0,0,0)}
 
-div.jp-volume-bar{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-105px -8px;cursor:pointer;height:30px;position:absolute;width:37px}
+div.jp-volume-bar{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-105px -8px;cursor:pointer;height:30px;position:absolute;width:37px}
 div.jp-volume-bar:before{content:"";position:absolute;right:0;top:0;width:45px;height:30px;top:0;right:0;background-color:rgba(0,0,0,.05)}
 div.jp-audio div.jp-volume-bar{left:330px;top:37px}
 div.jp-audio-stream div.jp-volume-bar{left:92px;top:37px}
 div.jp-video div.jp-volume-bar{right:30px;top:0}
-div.jp-volume-bar-value{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-150px -8px;height:30px;width:0}
+div.jp-volume-bar-value{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-150px -8px;height:30px;width:0}
 div.jp-audio div.jp-time-holder{position:absolute;top:50px}
 
 div.jp-current-time,div.jp-duration{font-size:.64em;font-style:oblique;width:60px}
@@ -84,8 +84,8 @@ span.jp-artist{color:#666;font-size:.8em}
 
 div.jp-video-play{background-color:rgba(0,0,0,0);cursor:pointer;overflow:hidden;width:100%}
 div.jp-video-full div.jp-video-play{height:100%}
-a.jp-video-play-icon{background:url(jplayer.png) no-repeat scroll -280px 0 rgba(0,0,0,0);display:block;height:72px;left:50%;margin-left:-36px;margin-top:-66px;position:absolute;text-indent:-9999px;top:50%;width:72px}
-div.jp-video-play:hover a.jp-video-play-icon{background:url(jplayer.png) no-repeat scroll -352px 0 rgba(0,0,0,0)}
+a.jp-video-play-icon{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png) no-repeat scroll -280px 0 rgba(0,0,0,0);display:block;height:72px;left:50%;margin-left:-36px;margin-top:-66px;position:absolute;text-indent:-9999px;top:50%;width:72px}
+div.jp-video-play:hover a.jp-video-play-icon{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png) no-repeat scroll -352px 0 rgba(0,0,0,0)}
 div.jp-jplayer audio,div.jp-jplayer{height:0;width:0;overflow:hidden}
 div.jp-jplayer{background-color:#000}
 div.jp-jplayer > img{height:auto!important}
@@ -98,14 +98,14 @@ div.jp-video ul.jp-toggles{margin-top:10px;width:100px}
 ul.jp-toggles li{display:block;float:right}
 ul.jp-toggles li a{display:block;height:30px;line-height:100%;text-indent:-9999px;width:30px}
 
-a.jp-repeat{background:url(jplayer.blue.monday.jpg) no-repeat scroll 0 -290px rgba(0,0,0,0)}
-a.jp-repeat:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -30px -290px rgba(0,0,0,0)}
-a.jp-repeat-off{background:url(jplayer.blue.monday.jpg) no-repeat scroll -60px -290px rgba(0,0,0,0)}
-a.jp-repeat-off:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -90px -290px rgba(0,0,0,0)}
-a.jp-shuffle{background:url(jplayer.blue.monday.jpg) no-repeat scroll 0 -270px rgba(0,0,0,0);margin-left:5px}
-a.jp-shuffle:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -30px -270px rgba(0,0,0,0)}
-a.jp-shuffle-off{background:url(jplayer.blue.monday.jpg) no-repeat scroll -60px -270px rgba(0,0,0,0);margin-left:5px}
-a.jp-shuffle-off:hover{background:url(jplayer.blue.monday.jpg) no-repeat scroll -90px -270px rgba(0,0,0,0)}
+a.jp-repeat{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll 0 -290px rgba(0,0,0,0)}
+a.jp-repeat:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -30px -290px rgba(0,0,0,0)}
+a.jp-repeat-off{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -60px -290px rgba(0,0,0,0)}
+a.jp-repeat-off:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -90px -290px rgba(0,0,0,0)}
+a.jp-shuffle{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll 0 -270px rgba(0,0,0,0);margin-left:5px}
+a.jp-shuffle:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -30px -270px rgba(0,0,0,0)}
+a.jp-shuffle-off{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -60px -270px rgba(0,0,0,0);margin-left:5px}
+a.jp-shuffle-off:hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.blue.monday.jpg) no-repeat scroll -90px -270px rgba(0,0,0,0)}
 
 .jp-no-solution{background-color:#EEE;border:2px solid #009BE3;color:#000;display:none;font-size:.8em;padding:5px}
 .jp-no-solution a{color:#000}
@@ -117,9 +117,9 @@ div.jp-video ul.jp-controls,div.jp-interface ul.jp-controls li,div.jp-current-ti
 div.jp-audio div.jp-type-single div.jp-progress,div.jp-audio div.jp-type-single div.jp-time-holder{left:110px;width:186px}
 div.jp-audio div.jp-type-playlist div.jp-progress,div.jp-audio div.jp-type-playlist div.jp-time-holder{left:166px;width:130px}
 
-a.jp-mute,a.jp-mute:hover{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-225px 0}
+a.jp-mute,a.jp-mute:hover{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-225px 0}
 div.jp-type-playlist div.jp-playlist a:hover,div.jp-type-playlist div.jp-playlist a.jp-playlist-current,div.jp-type-playlist div.jp-playlist a.jp-playlist-item-remove:hover,div.jp-type-playlist div.jp-playlist span.jp-free-media a:hover{color:#0D88C1}
 
-a.jp-full-screen,a.jp-restore-screen{background-image:url(jplayer.png);background-repeat:no-repeat;background-position:-188px -8px;background-color:rgba(0,0,0,.05);position:absolute;right:0;top:0}
+a.jp-full-screen,a.jp-restore-screen{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/jplayer/css/jplayer.png);background-repeat:no-repeat;background-position:-188px -8px;background-color:rgba(0,0,0,.05);position:absolute;right:0;top:0}
 a.jp-full-screen:hover,a.jp-restore-screen:hover{background-color:rgba(0,0,0,.1)}
 
