--- a/wp-content/themes/betheme/assets/ui/jquery.ui.all.css
+++ b/wp-content/themes/betheme/assets/ui/jquery.ui.all.css
@@ -8,9 +8,9 @@
 
 .ui-state-disabled{cursor:default!important}
 
-.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat;width:16px;height:16px;background-image:url(images/ui-icons_222222_256x240.png)}
+.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat;width:16px;height:16px;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_222222_256x240.png)}
 
-.ui-widget-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:#aaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;opacity:.3}
+.ui-widget-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:#aaa url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;opacity:.3}
 
 .ui-accordion{width:100%}
 .ui-accordion .ui-accordion-header{cursor:pointer;position:relative;margin-top:1px;zoom:1;border-style:solid;border-width:1px}
@@ -23,11 +23,11 @@
 .ui-accordion .ui-accordion-content-active{display:block;background:none}
 .ui-accordion .ui-state-active{background:none!important;font-weight:700;-webkit-box-shadow:inset 0 0 0 0 rgba(0,0,0,0.00);box-shadow:inset 0 0 0 0 rgba(0,0,0,0.00);border-bottom:0}
 .ui-accordion .ui-icon{display:block}
-.ui-accordion .ui-state-default{background:url(images/bg_widget_header.png) no-repeat 0 0}
-.ui-accordion .ui-state-hover{background:url(images/bg_widget_header_active.png) no-repeat 0 0}
+.ui-accordion .ui-state-default{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/bg_widget_header.png) no-repeat 0 0}
+.ui-accordion .ui-state-hover{background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/bg_widget_header_active.png) no-repeat 0 0}
 
 .ui-tabs{position:relative;overflow:hidden;zoom:1;margin-bottom:15px;background:none!important;border-radius:5px!important;border-style:solid;border-width:1px}
-.ui-tabs .ui-tabs-nav{display:block;background-image:url(../../images/bg_panel.png);background-repeat:repeat-x;background-position:left top;border-style:solid;border-width:0 0 1px;margin:0;padding:0;}
+.ui-tabs .ui-tabs-nav{display:block;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/bg_panel.png);background-repeat:repeat-x;background-position:left top;border-style:solid;border-width:0 0 1px;margin:0;padding:0;}
 .ui-tabs .ui-tabs-nav li{list-style:none;float:left;position:relative;white-space:nowrap;border-style:solid;border-width:0 1px 0 0;margin:0;padding:0}
 .ui-tabs .ui-tabs-nav li a{text-decoration:none;display:block;font-size:13px;font-weight:700;padding:14px 30px !important;}
 .ui-tabs .ui-tabs-nav li a i{margin-right:4px}
@@ -35,27 +35,27 @@
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a,.ui-tabs .ui-tabs-nav li.ui-state-disabled a,.ui-tabs .ui-tabs-nav li.ui-state-processing a,.ui-tabs .ui-tabs-nav li.ui-state-active a{cursor:text}
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a:after,.ui-tabs .ui-tabs-nav li.ui-state-disabled a:after,.ui-tabs .ui-tabs-nav li.ui-state-processing a:after,.ui-tabs .ui-tabs-nav li.ui-state-active a:after{content:"";display:block;height:1px;width:80%;position:absolute;left:50%;margin-left:-40%;bottom:-1px;z-index:2}
 .ui-tabs .ui-tabs-nav li a,.ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a{cursor:pointer}
-.ui-tabs .ui-tabs-panel{display:block;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;background-image:url(../../images/box_shadow.png);background-repeat:repeat-x;background-position:left top;border-width:0;padding:15px 20px 20px;margin:0;overflow:hidden;}
+.ui-tabs .ui-tabs-panel{display:block;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/box_shadow.png);background-repeat:repeat-x;background-position:left top;border-width:0;padding:15px 20px 20px;margin:0;overflow:hidden;}
 .wpb_content_element.wpb_tabs .wpb_tour_tabs_wrapper .wpb_tab.ui-tabs-panel { background-color:#fff;}
 .ui-tabs .ui-tabs-panel p:last-child{margin-bottom:0}
 .ui-tabs .ui-tabs-hide{display:none!important}
 
 .ui-widget .ui-widget{font-size:1em}
-.ui-widget-content{background:#fff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;border-style:solid;border-width:1px}
+.ui-widget-content{background:#fff url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;border-style:solid;border-width:1px}
 .ui-widget-header{font-weight:700;border-style:solid;border-width:1px}
 .ui-widget :active{outline:none}
 
-.ui-state-highlight,.ui-widget-content .ui-state-highlight,.ui-widget-header .ui-state-highlight{border:1px solid #fcefa1;background:#fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x;color:#363636}
+.ui-state-highlight,.ui-widget-content .ui-state-highlight,.ui-widget-header .ui-state-highlight{border:1px solid #fcefa1;background:#fbf9ee url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x;color:#363636}
 .ui-state-highlight a,.ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a{color:#363636}
-.ui-state-error,.ui-widget-content .ui-state-error,.ui-widget-header .ui-state-error{border:1px solid #cd0a0a;background:#fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;color:#cd0a0a}
+.ui-state-error,.ui-widget-content .ui-state-error,.ui-widget-header .ui-state-error{border:1px solid #cd0a0a;background:#fef1ec url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;color:#cd0a0a}
 
 .ui-priority-primary,.ui-widget-content .ui-priority-primary,.ui-widget-header .ui-priority-primary{font-weight:700}
 .ui-priority-secondary,.ui-widget-content .ui-priority-secondary,.ui-widget-header .ui-priority-secondary{opacity:.7;font-weight:400}
 
 .ui-state-disabled,.ui-widget-content .ui-state-disabled,.ui-widget-header .ui-state-disabled{opacity:.35;background-image:none}
-.ui-state-default .ui-icon{background-image:url(images/ui-icons_888888_256x240.png)}
-.ui-state-highlight .ui-icon{background-image:url(images/ui-icons_2e83ff_256x240.png)}
-.ui-state-error .ui-icon,.ui-state-error-text .ui-icon{background-image:url(images/ui-icons_cd0a0a_256x240.png)}
+.ui-state-default .ui-icon{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_888888_256x240.png)}
+.ui-state-highlight .ui-icon{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_2e83ff_256x240.png)}
+.ui-state-error .ui-icon,.ui-state-error-text .ui-icon{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_cd0a0a_256x240.png)}
 
 .ui-icon-carat-1-n{background-position:0 0}
 .ui-icon-carat-1-ne{background-position:-16px 0}
@@ -237,14 +237,14 @@
 
 .ui-accordion-header.ui-corner-all{border-bottom-left-radius:4px}
 .ui-tabs .ui-corner-top{border-top-right-radius:0;border-top-left-radius:0}
-.ui-widget-shadow{background:#aaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;opacity:.3;border-radius:8px;margin:-8px 0 0 -8px;padding:8px}
+.ui-widget-shadow{background:#aaa url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;opacity:.3;border-radius:8px;margin:-8px 0 0 -8px;padding:8px}
 
 .ui-state-default,.ui-widget-content .ui-state-default,.ui-widget-header .ui-state-default,.ui-state-hover,.ui-widget-content .ui-state-hover,.ui-widget-header .ui-state-hover,.ui-state-focus,.ui-widget-content .ui-state-focus,.ui-widget-header .ui-state-focus,.ui-state-active,.ui-widget-content .ui-state-active,.ui-widget-header .ui-state-active{font-weight:400}
 .ui-state-default a,.ui-state-default a:link,.ui-state-default a:visited,.ui-state-hover a,.ui-state-hover a:hover,.ui-state-active a,.ui-state-active a:link,.ui-state-active a:visited{text-decoration:none}
 .ui-state-error a,.ui-widget-content .ui-state-error a,.ui-widget-header .ui-state-error a,.ui-state-error-text,.ui-widget-content .ui-state-error-text,.ui-widget-header .ui-state-error-text{color:#cd0a0a}
 
-.ui-widget-content .ui-icon,.ui-widget-header .ui-icon{background-image:url(images/ui-icons_222222_256x240.png)}
-.ui-state-hover .ui-icon,.ui-state-focus .ui-icon,.ui-state-active .ui-icon{background-image:url(images/ui-icons_454545_256x240.png)}
+.ui-widget-content .ui-icon,.ui-widget-header .ui-icon{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_222222_256x240.png)}
+.ui-state-hover .ui-icon,.ui-state-focus .ui-icon,.ui-state-active .ui-icon{background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/assets/ui/images/ui-icons_454545_256x240.png)}
 .ui-icon-seek-start,.ui-icon-seek-first{background-position:-80px -160px}
 
 .wpb_tour .wpb_tabs_nav a { width:auto !important;}
@@ -261,7 +261,7 @@
 	.tabs_vertical.ui-tabs .ui-tabs-nav li{float:none;width:100%;white-space:normal;border-width:0 0 1px}
 	.tabs_vertical.ui-tabs .ui-tabs-nav li:first-child a{-webkit-border-radius:5px 0 0 0!important;border-radius:5px 0 0 0!important}
 	.tabs_vertical.ui-tabs .ui-tabs-nav li:last-child{border-bottom:0!important}
-	.tabs_vertical.ui-tabs .ui-tabs-nav li a{float:none;line-height:18px;height:auto;padding-left:20px;padding-right:20px;background-image:url(../../images/bg_panel.png);background-repeat:repeat-x;background-position:left top}
+	.tabs_vertical.ui-tabs .ui-tabs-nav li a{float:none;line-height:18px;height:auto;padding-left:20px;padding-right:20px;background-image:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/bg_panel.png);background-repeat:repeat-x;background-position:left top}
 	.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-tabs-selected a,.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-state-active a{background-image:none}
 	.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-tabs-selected a:after,.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-state-disabled a:after,.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-state-processing a:after,.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-state-active a:after{display:none}
 	.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-tabs-selected:after,.tabs_vertical.ui-tabs .ui-tabs-nav li.ui-state-active:after{content:"";display:block;height:100%;width:1px;position:absolute;left:auto;right:-1px;top:0;z-index:1}
