--- a/wp-content/themes/betheme/css/responsive.css
+++ b/wp-content/themes/betheme/css/responsive.css
@@ -991,7 +991,7 @@ html,body{overflow-x:hidden}
 
 	/* Timeline */
 	.timeline_items{background-position:91px top}
-	.timeline_items > li{padding:0 0 25px 150px !important;background:url(../images/timeline_right.png) no-repeat!important;background-position:50px top!important;width:auto}
+	.timeline_items > li{padding:0 0 25px 150px !important;background:url(https://hossanmonir.github.io/visionmash/wp-content/themes/betheme/images/timeline_right.png) no-repeat!important;background-position:50px top!important;width:auto}
 	.timeline_items > li h3 span{left:0!important;right:auto}
 	.timeline_items > li h3,
 	.timeline_items > li:nth-child(even) h3{text-align:left}
